# KN-lang_Zetheta_Automated_Reconciliation_Engine_Multi_Bank_Settlement

./: .gitignore  FEEDBACK_VIDEO_SCRIPT.md  Project_1B_Automated_Reconciliation_Engine_Submission.md  README.md  SUBMISSION_CHECKLIST.md  pyproject.toml  requirements.txt
adrs/: 001-python-data-engineering-stack.md  002-canonical-transaction-model.md  003-matching-strategy.md  004-exception-management-workflow.md  005-reporting-format-selection.md
diagrams/: exception-management-flow.puml  high-level-architecture.puml  matching-engine-flow.puml  multi-bank-ingestion-flow.puml  reconciliation-pipeline.puml
docs/: 00-development-plan.md  01-scenario-analysis.md  02-technology-evaluation.md  03-high-level-design.md  04-data-flow-design.md  05-canonical-data-model.md  06-matching-strategy.md  07-exception-management.md  08-mt940-and-camt053-ingestion.md  09-scalability-and-performance.md  10-capacity-planning.md  11-fmea.md  12-architecture-review-report.md  README.md  gemini-review-report.md  mt940-production-gap-analysis.md  phase3-review.md
reports/: benchmark_results.md
src/recon_engine/: __init__.py  __main__.py  benchmark.py  cli.py  config.py  models.py
src/recon_engine/exceptions/: __init__.py  classifier.py
src/recon_engine/matching/: __init__.py  exact_matcher.py  fuzzy_matcher.py  match_result.py
src/recon_engine/normalisation/: __init__.py  normalizer.py
tests/: test_camt053_parser.py  test_exact_matcher.py  test_excel_report.py  test_exception_classifier.py  test_fuzzy_matcher.py  test_mt940_parser.py  test_normalizer.py  test_report_writer.py
(+6 files in other folders)
