[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recon-engine"
version = "0.1.0"
description = "Automated reconciliation engine for multi-bank settlement systems"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2.0",
  "pydantic>=2.7.0",
  "typer>=0.12.0",
  "rapidfuzz>=3.9.0",
  "openpyxl>=3.1.0",
  "rich>=13.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0"]

[project.scripts]
recon-engine = "recon_engine.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
